// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Canvas > Should add one point when clicking on the canvas 1`] = `
<div
  class="points"
  style="left: 3px; top: 3px;"
/>
`;

exports[`Canvas > Should add two points when clicking on the canvas 1`] = `
<div
  class="points"
  style="left: 3px; top: 3px;"
/>
`;

exports[`Canvas > Should add two points when clicking on the canvas 2`] = `
<div
  class="points"
  style="left: 13px; top: 13px;"
/>
`;
